--- a/resources/config-openmaptiles.json
+++ b/resources/config-openmaptiles.json
@@ -35,7 +35,7 @@
 		"minzoom": 8,
 		"maxzoom": 14,
 		"basezoom": 14,
-		"include_ids": false,
+		"include_ids": true,
 		"name": "Tilemaker to OpenMapTiles schema",
 		"version": "0.1",
 		"description": "Tile config based on OpenMapTiles schema",
